# programming-in-haskell

ch13-monadic-parsing/: LICENSE  README.md  ch13-monadic-parsing.cabal  stack.yaml
ch13-monadic-parsing/src/: Main.hs  Parser.hs
ch13-monadic-parsing/test/: ParserTests.hs
