name:                ch13-monadic-parsing
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ch13-monadic-parsing#readme
license:             BSD3
license-file:        LICENSE
author:              Tymoteusz Paszun
maintainer:          tpaszun@gmail.com
copyright:           2017 Tymoteusz Paszun
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ch13-monadic-parsing
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       pretty-tree,
                       ch13-monadic-parsing

library
  ghc-options:         -Wall
  exposed-modules:     Parser
  build-depends:       base >= 4.7 && <5,
                       containers,
                       pretty-tree
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             ParserTests.hs
  hs-source-dirs:      test
  build-depends:       base,
                       hspec,
                       pretty-tree,
                       ch13-monadic-parsing
  default-language:    Haskell2010